--- a/css/main.css
+++ b/css/main.css
@@ -14,19 +14,38 @@ body {
     font-size: 16px;
     margin: auto;
     padding: 2vmin;
-    width : 100%;
+    width: 100%;
     height: 100%;
 }
 
-.title{
-    font-weight: 800;
+.big-title {
+    font-weight: 1000;
+    font-size: 48px;
     background: #fff;
     color: #e6adae;
-    margin: 5%;
+    margin-bottom: 0px;
     text-align: center;
 }
 
-.subtitle{
+.title {
+    font-weight: 1000;
+    font-size: 24px;
+    background: #fff;
+    color: #e6adae;
+    margin: 0px, 5%;
+    text-align: center;
+}
+
+
+img {
+    width: 10%;
+}
+
+.icon {
+    text-align: center;
+}
+
+.subtitle {
     font-weight: 800;
     background: #fff;
     color: #a1a1a1;
@@ -34,7 +53,7 @@ body {
     text-align: center;
 }
 
-.text_corpus{
+.text_corpus {
     margin: 2%;
     text-align: justify;
 }
